posiGen_FullsendBox/src/objects/BoxAccessMatrix_Profile__c.object
<CustomObject>
    <fields>
        <fullName>BoxAccessMatrix_SubFolder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BoxAccessMatrix SubFolder</label>
        <referenceTo>BoxAccessMatrix_SubFolder__c</referenceTo>
        <relationshipLabel>BoxAccessMatrix Profiles</relationshipLabel>
        <relationshipName>BoxAccessMatrix_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lookup_Field_Name__c</fullName>
        <label>Lookup Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Id__c</fullName>
        <label>Profile Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BoxAccessMatrix Profile</label>
    <nameField>
        <label>BoxAccessMatrix Profiles Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BoxAccessMatrix Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>